--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "number-counter": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-onclickoutside": "^6.12.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
@@ -21,8 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "gulp":" gulp sass",
-    "watching":"gulp watching",
+    "gulp": " gulp sass",
+    "watching": "gulp watching",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
